remodel/k8s/apps/media/arr/prowlarr/svc-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-web
  namespace: arr
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
    - name: web
      port: 80
      targetPort: http
